# serializer version: 1
# name: test_feature_spec_version_deterministic
  'd58f485df70cf7afb2e0fc7e54eebf52234a1be0c22015ccd3239739077aae52'
# ---
# name: test_feature_spec_version_includes_all_properties
  '9421fb545f2ace1ffb1e07c2d14cc62427d0d261a3b509c8a1473f574efc8cce'
# ---
# name: test_feature_spec_version_recorded_in_metadata_store
  dict({
    'feature_key': 'recorded/feature',
    'feature_spec_version': '1103e6a29e9cc569cde596388b9da0961f2e308ae7d492013dce6bbf9566994c',
    'feature_version': '0c7b2d83252fbf2f689bec7d37c4f7ffb103755d11eafabc1e000a372f415d83',
    'snapshot_version': '14d4294da40f4ab27ca85eb739fffd70e92c92522dbcba995cfa2aa343988bf3',
  })
# ---
# name: test_feature_spec_version_stored_in_snapshot
  dict({
    'feature_class_path': 'tests.test_spec_version.SnapshotFeature',
    'feature_spec': dict({
      'deps': None,
      'fields': list([
        dict({
          'code_version': 1,
          'deps': '__METAXY_ALL_DEP__',
          'key': list([
            'data',
          ]),
        }),
      ]),
      'id_columns': list([
        'sample_uid',
      ]),
      'key': list([
        'snapshot',
        'test',
      ]),
      'metadata': None,
    }),
    'feature_spec_version': '63d427712eb566d6c066c2514693714d82df604af91b48eae453634c4d684339',
    'feature_tracking_version': 'dabc7e8b54edb77992145840b2df9c81d4e384f3cdb1736bd3d5ecb83b0f422a',
    'feature_version': '7cfde77960e3cf10327e9cb97f311418b101fc5ee2c146922a997306e318edaf',
    'project': 'test',
  })
# ---
# name: test_feature_spec_version_with_column_selection_and_rename
  '9bdc3eb37440620d259db2709010b3d920a7c3147ba30d370494cb3fecc787fc'
# ---
# name: test_feature_spec_version_with_multiple_complex_deps
  '3a24675ffa9a6a053dd6738cfe1706470cabc458ec5702d5837138a205bdf4fc'
# ---
